[gd_scene load_steps=2 format=3 uid="uid://exvn8yqxqxqx"]

[ext_resource type="Script" path="res://scenes/ui/ConfirmationDialog.gd" id="1_0x0x0"]

[node name="ConfirmationDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0

[node name="Title" type="Label" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 50.0
text = "Delete Save?"
horizontal_alignment = 1

[node name="Message" type="Label" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
text = "Are you sure you want to delete this save file? This action cannot be undone."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0

[node name="NoButton" type="Button" parent="DialogPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="YesButton" type="Button" parent="DialogPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes" 